# Kobla-2D-Server

./: Makefile  README  clean.sh  create.sh  install_apt.sh  install_pacman.sh  run.sh  update_client_data.sh
real/: meson.build
real/src/: Cluster.cpp  Command.cpp  Connection.h  Handle.cpp  ISC.cpp  Item.cpp  Item.h  Load.cpp  Timer.h  World.cpp  meson.build
real_bin/: Config.txt  ExtraSpawn structure.txt  Monster structure.txt
real_bin/Data/Character/New Folder/: borrmaskin1.txt  eeee1.txt  test23.txt  test52.txt
real_bin/Data/Character/New Folder (3)/: test221.txt  test31.txt
real_bin/Data/Character/New folder (2)/: test2.txt
real_bin/Data/Character/fsdf/: borr1.txt  test32.txt  testt1.txt
real_bin/Data/Character/new back/: 0.txt  CharacterIndex.txt  borraihoff1.txt  test1.txt  (+4 more)
real_bin/Data/ExtraSpawn/: 3.txt  4.txt
real_bin/Data/Items/: 11.txt  12.txt  3.txt  7.txt  9.txt
real_bin/Data/Maps/: 13.txt  4.txt  Copy of 2.txt
real_bin/Data/Skill/: 3.txt
real_src/: Client.cpp  Command.h  Connection.cpp  Handle.h  Load.h  Main.cpp  Packet.cpp  RenderWorld.h  World.cpp  World.h
src/: AI.cpp  AI.h  AIBasic.cpp  AIBasic.h  Action.cpp  Action.h  Base.cpp  Base.h  BufferCheck.cpp  BufferCheck.h  Character.cpp  Character.h  Client.cpp  ClientData.cpp  ClientData.h  Cluster.cpp  Cluster.h  Command.cpp  Config.cpp  Config.h  Connection.cpp  Connection.h  Console.h  Database.cpp  Database.h  DatabaseFile.cpp  DatabaseFile.h  Game.cpp  Game.h  Handle.cpp  Handle.h  ISC.cpp  Item.cpp  Item.h  Kobla-2D-Server.cpp  Load.cpp  Log.cpp  Log.h  Login.cpp  Main.cpp  (+32 more)
(+28 files in other folders)
