sources = [
    'BufferCheck.cpp',
    'Client.cpp',
    'Cluster.cpp',
    'Command.cpp',
    'Connection.cpp',
    'Handle.cpp',
    'ISC.cpp',
    'Item.cpp',
    'Load.cpp',
    'Login.cpp',
    'Main.cpp',
    'Packet.cpp',
    'ProcessSend.cpp',
    'RenderWorld.cpp',
    'Timer.cpp',
    'World.cpp',
]

executable('kobla-server', sources)
